examples/test/testpolicy7726.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7726
  namespace: namespace224
spec:
  podSelector:
    matchLabels:
      key21: value24
      key30: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value19
          key5: value30
          key13: value48
      podSelector:
        matchLabels:
          key48: value48
          key7: value45
          key40: value40
